--- a/index.html
+++ b/index.html
@@ -125,6 +125,8 @@
               <i class="fa fa-youtube fa-stack-1x"></i>
             </span>
           </div>
+          <h3>O escríbenos en:</h3>
+          <h2>info@concierto-solidario.es</h2>
         </section>
         <section class="entries col-md-5">
           <h3>Quedan</h3><h2>850</h2><h3>entradas</h3>
