--- a/index.html
+++ b/index.html
@@ -32,11 +32,10 @@
   
   <section class="wrapper">
     <div class="barra"></div>
-    <nav class="navbar navbar-default navbar-static-top" role="navigation">
-      <div class="container">
-        <!-- Brand and toggle get grouped for better mobile display -->
+
+      <nav class="navbar navbar-default" role="navigation">
         <div class="navbar-header">
-          <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+          <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
             <span class="sr-only">Toggle navigation</span>
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
@@ -44,18 +43,15 @@
           </button>
           <a class="navbar-brand" href="#">Concierto Solidario de los Jóvenes</a>
         </div>
-        
-        <!-- Collect the nav links, forms, and other content for toggling -->
-        <div class="collapse navbar-collapse">
+        <div class="navbar-collapse collapse">
           <ul class="nav navbar-nav navbar-right">
             <li class="active"><a href="#">Inicio</a></li>
             <li><a href="motivo.html">¿Por qué?</a></li>
             <li><a href="concierto.html">Concierto</a></li>
             <li><a href="entradas.html">Compra de entradas</a></li>
           </ul>
-        </div><!-- /.navbar-collapse -->
-      </div>
-    </nav>
+        </div><!--/.nav-collapse -->
+      </nav>
 
 <!--Jumbotron
     ================================-->
