--- a/motivo.html
+++ b/motivo.html
@@ -48,6 +48,14 @@
             <li class="active"><a href="#">¿Por qué?</a></li>
             <li><a href="concierto.html">Concierto</a></li>
             <li><a href="entradas.html">Compra de entradas</a></li>
+            <li class="dropdown">
+              <a href="#" class="dropdown-toggle" data-toggle="dropdown">Edición 2013<b class="caret"></b></a>
+              <ul class="dropdown-menu">
+                <li><a href="http://www.concierto-solidario.es/old">Concierto 2013</a></li>
+                <li class="divider"></li>
+                <li><a href="https://www.facebook.com/media/set/?set=a.10152634166430711.1073741829.75660065710&type=1">Galería</a></li>
+              </ul>
+            </li>
           </ul>
         </div><!--/.nav-collapse -->
       </nav>
@@ -63,12 +71,13 @@
       <section class="foto row">
         <div class="text col-md-8">
           <h2>¿Qué es el Concierto Solidario de los Jóvenes?</h2>
-          <p class="conciencia">Los beneficios de este Concierto han sido destinados íntegramente a Cáritas con el objetivo de ayudar a las <b>familias</b> que, debido a la crisis económica, están en situaciones extremadamente difíciles. Especialmente golpeados por la dura realidad de los <b>desahucios</b>, pretendemos llegar a quienes han perdido su hogar, más aún si son familias con hijos a los que cuidar.</p>
-          <p class="conciencia">Esta iniciativa <b>no acaba en la ayuda económica.</b> Buscamos con ella difundir estas realidades y <b>concienciar a la sociedad</b> de que no basta con quejarse, sino que hay que actuar, cada uno en su ámbito de acción. Nuestra intención es mostrar a todo aquel que nos escuche que somos afortunados y hay en nuestro mismo pueblo y ciudad personas que no tienen las mismas oportunidades.</p>
-          <p class="conciencia">Sin embargo, no nos detenemos aquí. Nuestro mensaje final es decir al mundo que gracias a nuestra posición, gracias a las oportunidades que se nos han dado, podemos, cada uno de nosotros, marcar la diferencia. Podemos cambiar el mundo con pequeños detalles y, como dice Cáritas, <b>"Vivir más sencillamente para que otros, sencillamente, puedan vivir."<b></p>
-          <p class="conciencia"><b>Cáritas<b> trabaja incansablemente en más de 200 paises por la dignidad de la persona humana, la justicia y la solidaridad. En España cuenta con más de <b>65 000 voluntarios<b> y su ayuda llega a más de <b>6 millones de personas</b>.</p>
+          <p class="conciencia">Este concierto se ha organizado para el beneficio del centro de acogida Aterpe. Durante los últimos años este centro ha necesitado más recursos para su mantenimiento y para el sustento de todos los que se benefician de ello. </p>
+          <p class="conciencia">Su objetivo es la acogida y acompañamiento a toda persona en estado de necesidad para motivarle hacia un proceso personal que consiga el mayor grado de autonomía y calidad de vida. Hasta Aterpe llegan tres perfi les distintos de personas:<ul><li>personas que todavía no han roto con su red familiar y social. El objetivo es el retorno cuanto antes a su tejido social.</li><li>personas que ya han roto con su red social. Con ellas se trabaja la derivación y la promoción persona</li><li>personas cronificadas con gran deterioro físico y social. Con ellas se trabaja desde la reducción de daños</li></ul></p>
+          <p class="conciencia">Aterpe abre sus puertas todos los días del año gracias a sus 160 voluntarios que comprometidos y organizados llevan a acabo los diferentes servicios que ofrece, además de la acogida y la escucha papel fundamental de su presencia.  Además, Aterpe cuenta con una sala de noche con 16 plazas para personas concretas de cara a su proceso personal.</p>
+          <p class="conciencia">Esta iniciativa no acaba en la ayuda económica. Buscamos con ella difundir estas realidades y concienciar a la sociedad de que no basta con quejarse, sino que hay que actuar, cada uno en su ámbito de acción. Nuestra intención es mostrar a todo aquel que nos escuche que somos afortunados y hay en nuestro mismo pueblo y ciudad personas que no tienen las mismas oportunidades.</p>
+          <p class="conciencia"><b>Cáritas trabaja incansablemente en más de 200 paises por la dignidad de la persona humana, la justicia y la solidaridad. En España cuenta con más de 65 000 voluntarios y su ayuda llega a más de 6 millones de personas.</b></p>
         </div>
-        <img class="col-md-4" src="img//aterpe.jpg" alt"Centro de Cáritas" width="60%">
+        <img class="col-md-4" src="img//aterpe.jpg" alt"Centro de Cáritas" height="50%" style="margin-top:10%">
 
 
         <blockquote class="pull-right">
@@ -118,7 +127,7 @@
             </span>
           </div>
           <h3>O escríbenos en:</h3>
-          <h2>info@concierto-solidario.es</h2>
+          <a href="mailto:info@concierto-solidario.es" target="_top"><h2 class="especial">info@concierto-solidario.es</h2></a>
         </section>
         <section class="entries col-md-5">
           <h3>Quedan</h3><h2>850</h2><h3>entradas</h3>
@@ -129,10 +138,6 @@
           <a class="twitter-timeline" data-dnt="true" data-theme="dark" href="https://twitter.com/CSolidarioDSS" data-chrome="noheader nofooter transparent" data-widget-id="424686921269252096">.</a>
 <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
         </section>
-      </article>
-      
-      <article class="nombre">
-        <h1>Desarrollado por Ricardo J. García &copy; 2014</h1>
       </article>
     </footer>
 
