--- a/index.html
+++ b/index.html
@@ -71,25 +71,26 @@
     </article>
     <article class="main">
       <section class="foto row">
-        <img class="col-md-4" src="img/tenor.jpg" alt"Tenor en el Concierto Solidario de los Jóvenes" class="circulares">
+        <img class="col-md-4 img-responsive" src="img/tenor.jpg" alt"Tenor en el Concierto Solidario de los Jóvenes" class="circulares">
         <div class="text col-md-8">
-          <h2>¿Qué es el Concierto Solidario de los Jóvenes?</h2>
+          <a href="entradas.html" class="no-deco" style="text-decoration:none"><h2>¿Qué es el Concierto Solidario de los Jóvenes?</h2></a>
           <p>El Concierto Solidario es una iniciativa promovida y desarrollada por jóvenes universitarios comprometidos con la sociedad. Conscientes de la actual situación económica, e impulsados por la conciencia social del Colegio Mayor Ayete, hemos decidido no permanecer impasibles. Y por ello, a través de este Concierto, queremos hacer nuestra aportación para que las personas que peor lo están pasando a causa de la crisis, parados y desahuciados, puedan salir adelante. Los beneficios del concierto son destinados a las actividades que Caritas Gipuzkoa desarrolla con esas personas.</p>
+          <h4>28 de Febrero de 2014, a las 20:00 en la Basílica de Santa María del Coro, San Sebastián - Donostia</h4>
         </div>
       </section>
       
       <section class="foto row">
         <div class="text col-md-8">
-          <h2>Solidaridad</h2>
+          <a href="motivo.html" class="no-deco" style="text-decoration:none"><h2>Solidaridad</h2></a>
           <p>La componente vital de este evento es la solidaridad. Esta edición, como en la anterior, destinará los beneficios a Caritas Gipuzkoa para el programa de personas sin hogar. Más en concreto para el centro de acogida Aterpe.</p>
         </div>
-        <img class="col-md-4" src="img/violines.jpg" alt"violines en el Concierto Solidario de los Jóvenes" class="circulares">
+        <img class="col-md-4 img-responsive" src="img/violines.jpg" alt"violines en el Concierto Solidario de los Jóvenes" class="circulares">
       </section>
       
       <section class="foto row">
-        <img class="col-md-4" src="img/edad.jpg" alt"Concierto Solidario para cualquiera" class="circulares">
+        <img class="col-md-4 img-responsive" src="img/edad.jpg" alt"Concierto Solidario para cualquiera" class="circulares">
         <div class="text col-md-8">
-          <h2>Sobre el concierto</h2>
+          <a href="concierto.html" class="no-deco" style="text-decoration:none"><h2>Sobre el concierto</h2></a>
           <p>El Colegio Mayor Ayete ha venido organizando el concierto solidario de los jóvenes desde hace siete años. La última edición fue a cargo de la Orquesta de Musikene y la Coral de Bilbao en el Kursaal de San Sebastián. Este año ha sido organizado con la colaboración del Orfeón Donostiarra que hará un programa exclusivo en Santa María del Coro.</p>
         </div>
       </section>
