--- a/entradas.html
+++ b/entradas.html
@@ -69,7 +69,7 @@
     <article class="main">
       <section class="text">
         <h2>Comprar entradas para el Concierto Solidario de los Jóvenes</h2>
-              <h4>Santa María del Coro</h4>
+              <h4>Viernes 28 de Febrero de 2014 a las 20:00 en la Basílica de Santa María del Coro</h4>
               <p>Los precios de las distintas zonas son de 10€ para la <b>Zona C</b>, 15€ para la <b>Zona B</b> y 20€ para la <b>Zona A</b>.</p>
       </section>
             <img class="media-object" src="img/zonas.jpg" alt="Zonas de Santa María del Coro" width="60%">
