--- a/entradas.html
+++ b/entradas.html
@@ -72,7 +72,7 @@
               <h4>Viernes 28 de Febrero de 2014 a las 20:00 en la Basílica de Santa María del Coro</h4>
               <p>Los precios de las distintas zonas son de 10€ para la <b>Zona C</b>, 15€ para la <b>Zona B</b> y 20€ para la <b>Zona A</b>.</p>
       </section>
-            <img class="media-object" src="img/zonas.jpg" alt="Zonas de Santa María del Coro" width="60%">
+            <img class="media-object" src="img/zonas.png" alt="Zonas de Santa María del Coro" width="90%">
             
 <div id="tkt-content">Compra aquí tus entradas</div><script language="javascript" type="text/javascript" src="https://www.ticketea.com/conciertosolidario/buy?width=600px&height=600px&lang=es_es"></script><a href="https://www.ticketea.com/conciertosolidario" alt="Concierto Solidario de los Jóvenes" title="ticketea"><img src="https://www.ticketea.com/images/powered_by.png" alt="ticketea" /></a>
 
