Images and texts

--- a/motivo.html
+++ b/motivo.html
@@ -75,13 +75,13 @@
           <p class="conciencia">Su objetivo es la acogida y acompañamiento a toda persona en estado de necesidad para motivarle hacia un proceso personal que consiga el mayor grado de autonomía y una mejor calidad de vida. Hasta Aterpe llegan tres perfiles distintos de personas:<ul><li>Personas que todavía no han roto con su red familiar y social. El objetivo es el retorno cuanto antes a su tejido social.</li><li>Personas que ya han roto con su red social. Con ellas se trabaja la derivación y la promoción personal.</li><li>Personas cronificadas con gran deterioro físico y social. Con ellas se trabaja desde la reducción de daños.</li></ul></p>
           <p class="conciencia">Aterpe abre sus puertas todos los días del año gracias a sus 160 voluntarios que comprometidos y organizados llevan a acabo los diferentes servicios que ofrece, además de la acogida y la escucha papel fundamental de su presencia.  Además, Aterpe cuenta con una sala de noche con 16 plazas para personas concretas de cara a su proceso personal.</p>
           <p class="conciencia">Esta iniciativa no acaba en la ayuda económica. Buscamos con ella difundir estas realidades y concienciar a la sociedad de que no basta con quejarse, sino que hay que actuar, cada uno en su ámbito de acción. Nuestra intención es mostrar a todo aquel que nos escuche que somos afortunados y hay en nuestro mismo pueblo y ciudad personas que no tienen las mismas oportunidades.</p>
-          <p class="conciencia"><b>Cáritas trabaja incansablemente en más de 200 paises por la dignidad de la persona humana, la justicia y la solidaridad. En España cuenta con más de 65 000 voluntarios y su ayuda llega a más de 6 millones de personas.</b></p>
+          <p class="conciencia"><b>Cáritas trabaja incansablemente en más de 200 paises por la dignidad de la persona humana, la justicia y la solidaridad. En España cuenta con más de 65.000 voluntarios y su ayuda llega a más de 6 millones de personas.</b></p>
         </div>
         <img class="col-md-4" src="img//aterpe.jpg" alt"Centro de Cáritas" height="50%" style="margin-top:10%">
 
 
         <blockquote class="pull-right">
-          <h3>"Vivir más sencillamente para que otros, sencillamente, puedan vivir."</h3>
+          <h3>"Vivir sencillamente para que otros, sencillamente, puedan vivir."</h3>
           <small><cite title="Source Title">Cáritas</cite></small>
         </blockquote>
       </section>
