--- a/entradas.html
+++ b/entradas.html
@@ -72,7 +72,7 @@
               <h4>Viernes 28 de Febrero de 2014 a las 20:00 en la Basílica de Santa María del Coro</h4>
               <p>Los precios de las distintas zonas son de 10€ para la <b>Zona C</b>, 15€ para la <b>Zona B</b> y 20€ para la <b>Zona A</b>.</p>
       </section>
-            <img class="media-object" src="img/zonas.png" alt="Zonas de Santa María del Coro" width="90%">
+            <img class="media-object" src="img/zonas.png" alt="Zonas de Santa María del Coro" class="img-responsive" width="90%">
             
     <a href="https://www.ticketea.com/conciertosolidario" class="hidden-md hidden-lg" title="Compra aquí tus entradas">
               <img src="https://d18t9gwja9h9h.cloudfront.net/assets/images/buttons/es/buyhere.png" alt="Compra aquí tus entradas" />
