--- a/motivo.html
+++ b/motivo.html
@@ -99,7 +99,7 @@
           <img src="img/logoayete.png" alt="Colegio Mayor Ayete" class="img-responsive" width="80%">
         </a>
         <a href="http://www.orfeondonostiarra.org/" class="col-md-3 col-md-offset-2 logopie">
-          <img src="img/logoorfeon1.tiff" alt="Orfeón Donostiarra" class="img-responsive" width="50%">
+          <img src="img/logoorfeon.png" alt="Orfeón Donostiarra" class="img-responsive" width="50%">
         </a>
       </section>
       <section class="sponsors row">
