--- a/index.html
+++ b/index.html
@@ -84,12 +84,13 @@
           <a href="motivo.html" class="no-deco" style="text-decoration:none"><h2>Solidaridad</h2></a>
           <p>La componente vital de este evento es la solidaridad. Esta edición, como en la anterior, destinará los beneficios a Caritas Gipuzkoa para el programa de personas sin hogar. Más en concreto para el centro de acogida Aterpe.</p>
         </div>
-        <img class="col-md-4 img-responsive" src="img/violines.jpg" alt"violines en el Concierto Solidario de los Jóvenes" class="circulares">
+        <img class="col-md-4 img-responsive" src="img/edad2.jpg" alt"Concierto Solidario para cualquiera" class="circulares">
+
       </section>
       
       <section class="foto row">
-        <img class="col-md-4 img-responsive" src="img/edad.jpg" alt"Concierto Solidario para cualquiera" class="circulares">
-        <div class="text col-md-8">
+        <img class="col-md-4 img-responsive" src="img/violines.jpg" alt"violines en el Concierto Solidario de los Jóvenes" class="circulares">
+          <div class="text col-md-8">
           <a href="concierto.html" class="no-deco" style="text-decoration:none"><h2>Sobre el concierto</h2></a>
           <p>El Colegio Mayor Ayete ha venido organizando el concierto solidario de los jóvenes desde hace siete años. La última edición fue a cargo de la Orquesta de Musikene y la Coral de Bilbao en el Kursaal de San Sebastián. Este año ha sido organizado con la colaboración del Orfeón Donostiarra que hará un programa exclusivo en Santa María del Coro.</p>
         </div>
@@ -104,7 +105,7 @@
           <img src="img/logoayete.png" alt="Colegio Mayor Ayete" class="img-responsive" width="80%">
         </a>
         <a href="http://www.orfeondonostiarra.org/" class="col-md-3 col-md-offset-2 logopie">
-          <img src="img/logoorfeon1.tiff" alt="Orfeón Donostiarra" class="img-responsive" width="50%">
+          <img src="img/logoorfeon.png" alt="Orfeón Donostiarra" class="img-responsive" width="50%">
         </a>
       </section>
       <section class="sponsors row">
