Days until concert

--- a/motivo.html
+++ b/motivo.html
@@ -146,7 +146,11 @@
           <a href="mailto:info@concierto-solidario.es" target="_top"><h2 class="especial">info@concierto-solidario.es</h2></a>
         </section>
         <section class="entries col-md-5">
-          <h3>Quedan</h3><h2>850</h2><h3>entradas</h3>
+          <h3>Quedan</h3>    
+          <section class="countdown">
+            <div><h2 id="d">:</h2></div>
+          </section>
+          <h3>días</h3>
         </section>
         
         <section class="twitter col-md-4">
@@ -164,6 +168,7 @@
     <!--Fin de la web (Jquery y archivos de bootstrap
     ================================-->
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
+    <script src='js/script.js'></script>
     <script src="https://code.jquery.com/jquery.js"></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
     <script src="js/bootstrap.min.js"></script>
