--- a/concierto.html
+++ b/concierto.html
@@ -26,6 +26,9 @@
     <link href="css/custom.css" rel="stylesheet">
     <link href="css/bootstrap.css" rel="stylesheet">
     <link href="css/custom.css" rel="stylesheet">
+    
+    <link rel="shortcut icon" href="favicon.ico" />
+    
   </head>
   <body>
   
