--- a/index.html
+++ b/index.html
@@ -26,9 +26,8 @@
     <link href="css/custom.css" rel="stylesheet">
     <link href="css/bootstrap.css" rel="stylesheet">
     <link href="css/custom.css" rel="stylesheet">
-    <script src="script.js"></script>
     
-    <link rel="shortcut icon" href="favicon.ico" />
+    <link rel="icon" href="/favicon.ico" type="image/x-icon">
 
 
   </head>
