--- a/motivo.html
+++ b/motivo.html
@@ -27,7 +27,7 @@
     <link href="css/bootstrap.css" rel="stylesheet">
     <link href="css/custom.css" rel="stylesheet">
     
-    <link rel="shortcut icon" href="favicon.ico" />
+    <link rel="icon" href="/favicon.ico" type="image/x-icon">
     
   </head>
   <body>
