--- a/entradas.html
+++ b/entradas.html
@@ -89,27 +89,35 @@
     
     <article class="mentions">
       <section class="organizers row">
-        <h3>Organizado por:</h3>
-        <a href="http://www.ayete.es" class="col-md-3 col-md-offset-2 logopie">
-          <img src="img/logoayete.png" alt="Colegio Mayor Ayete" class="img-responsive" width="80%">
+        <h3>En beneficio de:</h3>
+        <a href="http://www.caritasgipuzkoa.org/" class="logopie" >
+          <img src="img/logocaritas.png" alt="Cáritas" class="img-responsive" id="caritas">
         </a>
-        <a href="http://www.orfeondonostiarra.org/" class="col-md-3 col-md-offset-2 logopie">
-          <img src="img/logoorfeon.png" alt="Orfeón Donostiarra" class="img-responsive" width="50%">
+      </section>
+      <section class="organizers row">
+        <h3>Organizado por:</h3>
+        <a href="http://www.ayete.es" class="col-md-3 col-md-offset-1 logopie">
+          <img src="img/logoayete.png" alt="Colegio Mayor Ayete" class="img-responsive">
+        </a>
+        <a href="http://www.orfeondonostiarra.org/" class="col-md-3  logopie">
+          <img src="img/logoorfeon.png" alt="Orfeón Donostiarra" class="img-responsive">
+        </a>
+        <a href="http://www.tecnun.es" class="col-md-3 logopie">
+          <img src="img/logotecnun.png" alt="Tecnun Escuela de Ingenieros de la Universidad de Navarra" class="img-responsive">
         </a>
       </section>
       <section class="sponsors row">
         <h3>Con la colaboración de:</h3>
-        <a href="http://www.tecnun.es" class="col-md-2 col-md-offset-1 logopie">
-          <img src="img/logotecnun.png" alt="Tecnun Escuela de Ingenieros de la Universidad de Navarra" class="img-responsive" width="100%">
+
+        <a href="http://www.tamadocumentacion.com/" class="col-md-3 col-md-offset-2 logopie">
+          <img src="img/tama.png" alt="Impresiones Tama" class="img-responsive">
         </a>
-        <a href="http://www.caritasgipuzkoa.org/" class="col-md-2 col-md-offset-1 logopie">
-          <img src="img/logocaritas.png" alt="Cáritas" class="img-responsive" width="90%">
-        </a>
-        <a href="http://www.ticketea.com/" class="col-md-2 col-md-offset-1 logopie" id="ticketea">
-          <img src="img/logoticketea.png" alt="Ticketea" class="img-responsive" width="100%">
+        <a href="http://www.ticketea.com/" class="col-md-3 col-md-offset-1 logopie">
+          <img src="img/logoticketea.png" alt="Ticketea" class="img-responsive">
         </a>
       </section>
     </article>
+
     
     <footer>
       <article class="pie row">
