--- a/concierto.html
+++ b/concierto.html
@@ -316,9 +316,10 @@ Es desde 1980 organista de la parroquia de San Ignacio de San Sebastián. Colabo
         </section>
         <section class="entries col-md-5">
           <h3>Quedan</h3>    
-          <section class="countdown">
+          <!--<section class="countdown">
             <div><h2 id="d">:</h2></div>
-          </section>
+          </section>-->
+          <h2>0</h2>
           <h3>días</h3>
         </section>
         
