--- a/motivo.html
+++ b/motivo.html
@@ -168,9 +168,10 @@
         </section>
         <section class="entries col-md-5">
           <h3>Quedan</h3>    
-          <section class="countdown">
+          <!--<section class="countdown">
             <div><h2 id="d">:</h2></div>
-          </section>
+          </section>-->
+          <h2>0</h2>
           <h3>días</h3>
         </section>
         
