--- a/motivo.html
+++ b/motivo.html
@@ -9,6 +9,7 @@
     <meta name="description" content="Por qué organizamos el Concierto Solidario de los Jóvenes">
     <meta name="keywords" content="Concierto, Solidario, Orfeon, Donostiarra, Ayete, Tecnun, Universidad de Navarra, San Sebastian, Desahucios, Caritas">
     <meta name="author" content="Ricardo José García Mora">
+    <link type="text/plain" rel="author" href="/humans.txt" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
@@ -90,7 +91,7 @@
           <p class="conciencia">Esta iniciativa no acaba en la ayuda económica. Buscamos con ella difundir estas realidades y concienciar a la sociedad de que no basta con quejarse, sino que hay que actuar, cada uno en su ámbito de acción. Nuestra intención es mostrar a todo aquel que nos escuche que somos afortunados y hay en nuestro mismo pueblo y ciudad personas que no tienen las mismas oportunidades.</p>
           <p class="conciencia"><b>Cáritas trabaja incansablemente en más de 200 paises por la dignidad de la persona humana, la justicia y la solidaridad. En España cuenta con más de 65.000 voluntarios y su ayuda llega a más de 6 millones de personas.</b></p>
         </div>
-        <img class="col-md-4" src="img//aterpe.jpg" alt"Centro de Cáritas" height="50%" style="margin-top:10%">
+        <img class="col-md-4" src="img//aterpe.jpg" alt="Centro de Cáritas" height="50%" style="margin-top:10%">
 
 
         <blockquote class="pull-right">
@@ -181,6 +182,9 @@
 <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
         </section>
       </article>
+        <section class="row subpie">
+          <h1>Ricardo José García. 2013. Source code available at <a href="http://www.github.com">Github</a></h1>
+        </section>
     </footer>
 
       
@@ -190,8 +194,9 @@
     <!--Fin de la web (Jquery y archivos de bootstrap
     ================================-->
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
+    <!--Countdown Code
     <script src='js/script.js'></script>
-    <script src="https://code.jquery.com/jquery.js"></script>
+    -->    <script src="https://code.jquery.com/jquery.js"></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
     <script src="js/bootstrap.min.js"></script>
   </body>
