--- a/entradas.html
+++ b/entradas.html
@@ -95,7 +95,7 @@
               </a>
             </h4>
           </div>
-          <div id="collapseTwo" class="panel-collapse collapse">
+          <div id="collapseTwo" class="panel-collapse collapse in">
             <div class="panel-body">
               <img class="media-object img-responsive" src="img/zonas.png" alt="Zonas de Santa María del Coro" width="90%">
             </div>
