--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
         </section>
       </article>
         <section class="row subpie">
-          <h1>Ricardo José García. 2013. Source code available at <a href="http://www.github.com">Github</a></h1>
+          <h1>Ricardo José García. 2013. Source code available at <a href="https://github.com/rjgarciam/Concierto-Solidario">Github</a></h1>
         </section>
     </footer>
 
