--- a/concierto.html
+++ b/concierto.html
@@ -331,7 +331,7 @@ Es desde 1980 organista de la parroquia de San Ignacio de San Sebastián. Colabo
         </section>
       </article>
         <section class="row subpie">
-          <h1>Ricardo José García. 2013. Source code available at <a href="http://www.github.com">Github</a></h1>
+          <h1>Ricardo José García. 2013. Source code available at <a href="https://github.com/rjgarciam/Concierto-Solidario">Github</a></h1>
         </section>
     </footer>
 
